--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,18 @@
+geoids/egm2008-2_5.wld filter=lfs diff=lfs merge=lfs -text
+geoids/egm2008-5.pgm filter=lfs diff=lfs merge=lfs -text
+lib/core-0.4.1-SNAPSHOT.jar filter=lfs diff=lfs merge=lfs -text
+lib/proj4j-1.3.1-SNAPSHOT.jar filter=lfs diff=lfs merge=lfs -text
+lib/proj4j-epsg-1.3.1-SNAPSHOT.jar filter=lfs diff=lfs merge=lfs -text
+geoids/egm2008-1.pgm filter=lfs diff=lfs merge=lfs -text
+geoids/egm2008-1.pgm.aux.xml filter=lfs diff=lfs merge=lfs -text
+geoids/egm2008-1.wld filter=lfs diff=lfs merge=lfs -text
+geoids/egm2008-5.wld filter=lfs diff=lfs merge=lfs -text
+geoids/egm2008-2_5.pgm filter=lfs diff=lfs merge=lfs -text
+geoids/egm2008-2_5.pgm.aux.xml filter=lfs diff=lfs merge=lfs -text
+geoids/egm2008-5.pgm.aux.xml filter=lfs diff=lfs merge=lfs -text
+egm2008-1.zip filter=lfs diff=lfs merge=lfs -text
+egm2008-2_5.zip filter=lfs diff=lfs merge=lfs -text
+egm2008-5.zip filter=lfs diff=lfs merge=lfs -text
 *.pgm filter=lfs diff=lfs merge=lfs -text
 *.zip filter=lfs diff=lfs merge=lfs -text
 lib/*.jar filter=lfs diff=lfs merge=lfs -text
