--- a/.gitattributes
+++ b/.gitattributes
@@ -13,6 +13,7 @@ geoids/egm2008-5.pgm.aux.xml filter=lfs diff=lfs merge=lfs -text
 egm2008-1.zip filter=lfs diff=lfs merge=lfs -text
 egm2008-2_5.zip filter=lfs diff=lfs merge=lfs -text
 egm2008-5.zip filter=lfs diff=lfs merge=lfs -text
+geoids/*pgm filter=lfs diff=lfs merge=lfs -text
 *.pgm filter=lfs diff=lfs merge=lfs -text
 *.zip filter=lfs diff=lfs merge=lfs -text
 lib/*.jar filter=lfs diff=lfs merge=lfs -text
